<?xml version="1.0"?>
<package format="2">
  <name>image_practice</name>
  <version>1.0.0</version>
  <description>This package subscribes a type of sensor_msgs/Image message and publishes a flipped message and that in grayscale. </description>

  <maintainer email="jongwon.lee@kaist.ac.kr">Jongwon Lee</maintainer>
  <author email="jongwon.lee@kaist.ac.kr">Jongwon Lee</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
