<?xml version="1.0"?>
<package format="2">
  <name>me489_hw2</name>
  <version>1.0.0</version>
  <description>The message practice package</description>

  <maintainer email="jongwon.lee@kaist.ac.kr">jlee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
